--- a/templates/polls/results.html
+++ b/templates/polls/results.html
@@ -1,3 +1,5 @@
+{% extends "base.html" %}
+{% block content %}
 <h1> {{ poll.question }} </h1>
 
 <ul>
@@ -7,3 +9,4 @@
 </ul>
 
 <a href="/polls/{{ poll.id }}/">Vote again? </a>
+{% endblock %}
